sbatch_outputs/err_train_size50.37314556.err
Lmod Warning:
-------------------------------------------------------------------------------
The following dependent module(s) are not currently loaded: cuda/11.5.0
(required by: ucx/1.12.1)
-------------------------------------------------------------------------------




Lmod is automatically replacing "blis/3.1.0" with "openblas/0.3.10".


The following have been reloaded with a version change:
  1) cuda/9.1.85 => cuda/11.5.0
  2) cudnn/7.0.5 => cudnn/8.3.3.40
  3) libressl/2.5.3 => libressl/3.2.1
  4) py-numpy/1.14.3_py27 => py-numpy/1.24.2_py39
  5) py-pytorch/0.3.0_py27 => py-pytorch/2.0.0_py39
  6) py-scipy/1.1.0_py27 => py-scipy/1.10.1_py39
  7) python/2.7.13 => python/3.9.0
  8) sqlite/3.18.0 => sqlite/3.37.2

Lmod Warning:
-------------------------------------------------------------------------------
The following dependent module(s) are not currently loaded: cuda/11.5.0
(required by: nccl/2.11.4, cudnn/8.3.3.40), hdf5/1.12.2 (required by:
opencv/4.7.0), openmpi/4.1.2 (required by: py-pytorch/2.0.0_py39),
py-numpy/1.24.2_py39 (required by: py-scipy/1.10.1_py39, opencv/4.7.0,
py-pytorch/2.0.0_py39)
-------------------------------------------------------------------------------




The following have been reloaded with a version change:
  1) cuda/11.5.0 => cuda/9.0.176
  2) hdf5/1.12.2 => hdf5/1.10.2
  3) libfabric/1.14.0 => libfabric/1.6.0
  4) libressl/3.2.1 => libressl/2.5.3
  5) openmpi/4.1.2 => openmpi/3.1.2
  6) py-numpy/1.24.2_py39 => py-numpy/1.14.3_py27
  7) python/3.9.0 => python/2.7.13
  8) sqlite/3.37.2 => sqlite/3.18.0
  9) ucx/1.12.1 => ucx/1.3.1

Traceback (most recent call last):
  File "train_grainsize.py", line 7, in <module>
    import torch
  File "/share/software/user/open/py-pytorch/2.0.0_py39/lib/python3.9/site-packages/torch/__init__.py", line 121
    err.strerror += f' Error loading "{dll}" or one of its dependencies.'
                                                                        ^
SyntaxError: invalid syntax
